# ruff-html

./: .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  LICENSE  README.md  json_to_html.py  pyproject.toml
.github/workflows/: coverage.yml  docs.yml  linting.yml  testing.yml
docs/: truncate_requirements.py
docs/source/: conf.py
original_report/: collect.py  hooker.py  issues.py  loc.py  misc.py  render.py
original_report/templates/: styles.css
ruff_html/: __init__.py  issues.py  load.py
ruff_report/: hooker.py  issues.py  load.py  nerds.py  render.py
ruff_reporter/: issues.py  quality.py  render.py  reporter.py  search.py  statistics.py
ruff_reporter/templates/: all.html  file.html  file_source.html  file_summary.html  ruleset.html  severity.html  summary.html
ruff_reporter/templates/assets/: styles.css
scripts/: build.bat  docs.bat  lint.bat  publish.bat  review.bat
tests/: conftest.py
tests/a_test_installation/: test_a_install.py
